fix subscribe input box width on small screens

--- a/src/css/components/subscribe-box.scss
+++ b/src/css/components/subscribe-box.scss
@@ -26,7 +26,7 @@
   &-form {
     display: block;
     margin: 15px auto;
-    width: 100%;
+    max-width: 50%;
   }
 
   form {
@@ -51,7 +51,8 @@
       border-radius: 4px;
     }
     &-form {
-      max-width: 50%;
+      width: 100%;
+      max-width: none;
     }
   }
 }
